force-app/main/default/objects/Delivery__c/Delivery__c.object-meta.xml
<CustomObject>
    <description>Create a new custom tab for this object (このオブジェクト用に新しいカスタムタブを作成する)</description>
    <label>配送</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>配送名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>