force-app/main/default/objects/Delivery__c/fields/Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date__c</fullName>
    <label>スケジュール済み日時</label>
    <type>DateTime</type>
</CustomField>