force-app/main/default/objects/Delivery__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>納入業者</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Delivery</relationshipName>
    <type>Lookup</type>
</CustomField>